--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "angular": "~1.3.8",
+    "jquery": "~2.1.3"
+  }
 }
