--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
   },
   "homepage": "https://github.com/Wildhoney/Angularise",
   "devDependencies": {
-    "express": "^4.10.6"
+    "express": "^4.10.6",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.3",
+    "gulp-jshint": "^1.9.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-watch": "^3.0.0",
+    "js-yaml": "^3.2.5"
   }
 }
