--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_script:
 script:
   - npm install
   - bower install
-  - grunt test
+  - gulp test
+  - gulp build
 
 deploy:
   provider: heroku
